[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Common/Menus/SettingsMenu/Presets/presets.gd" type="Script" id=1]

[node name="Presets" type="HBoxContainer"]
margin_left = 457.0
margin_right = 546.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
text = "settings_presets_setting"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 159.0
margin_right = 188.0
margin_bottom = 20.0

[node name="SaveButton" type="Button" parent="."]
margin_left = 192.0
margin_right = 233.0
margin_bottom = 20.0
text = "Save"

[node name="AddPreset" type="Button" parent="."]
margin_left = 237.0
margin_right = 257.0
margin_bottom = 20.0
text = "+"

[node name="FolderButton" type="Button" parent="."]
margin_left = 261.0
margin_right = 313.0
margin_bottom = 20.0
text = "Folder"

[node name="RefreshButton" type="Button" parent="."]
margin_left = 317.0
margin_right = 377.0
margin_bottom = 20.0
text = "Refresh"
